Splitted solution to 2 projects

--- a/src/KaCake/Views/_ViewImports.cshtml
+++ b/src/KaCake/Views/_ViewImports.cshtml
@@ -1,6 +1,6 @@
 ﻿@using KaCake
-@using KaCake.Models
-@using KaCake.Models.AccountViewModels
-@using KaCake.Models.ManageViewModels
+@using KaCake.ViewModels
+@using KaCake.ViewModels.Account
+@using KaCake.ViewModels.Manage
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
