--- a/src/KaCake/Views/Course/Index.cshtml
+++ b/src/KaCake/Views/Course/Index.cshtml
@@ -8,7 +8,7 @@
 <div class="list-group">
     @if (User.IsInRole(RoleNames.Admin))
     {
-        <a asp-controller="Course" asp-action="Create" class="list-group-item"><span class="glyphicon glyphicon-plus"></span> Create course</a>
+        <a asp-controller="Course" asp-action="Create" class="list-group-item active"><span class="glyphicon glyphicon-plus"></span> Create course</a>
     }
 
     @foreach (var course in Model.Courses)
