--- a/src/KaCake/Views/Submission/View.cshtml
+++ b/src/KaCake/Views/Submission/View.cshtml
@@ -8,4 +8,7 @@
 
 <h4>Submission time: @Model.Time</h4>
 
-<a asp-controller="Submission" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-default">Delete assignment</a>
+<div class="btn-group">
+    <a asp-controller="Project" asp-action="Index" asp-route-id="@Model.Id" class="btn btn-primary">View files</a>
+    <a asp-controller="Submission" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger" data-toggle="confirmation">Delete submission</a>
+</div>
