--- a/src/KaCake/Views/TaskVariant/View.cshtml
+++ b/src/KaCake/Views/TaskVariant/View.cshtml
@@ -9,12 +9,17 @@
 
 <div class="well">@Html.Raw(Model.Description)</div>
 
-@if (isAdmin)
-{
-    <a asp-controller="TaskVariant" asp-action="AddAssignments" asp-route-id="@Model.Id" class="btn btn-default">
-        Add or remove assignments (@Model.AssignmentsCount)
-    </a>
-    <br/>
-    <br/>
-    <a asp-controller="Assignment" asp-action="Index" asp-route-id="@Model.Id" class="btn btn-default">View assignments</a>
-}
+<div class="btn-group">
+    @if (Model.IsAssigned)
+    {
+        <a asp-controller="Assignment" asp-action="View" asp-route-id="@Model.Id" class="btn btn-default">View your assignment</a>
+    }
+
+    @if (isAdmin)
+    {
+        <a asp-controller="TaskVariant" asp-action="AddAssignments" asp-route-id="@Model.Id" class="btn btn-default">
+            Add or remove assignments (@Model.AssignmentsCount)
+        </a>
+        <a asp-controller="Assignment" asp-action="Index" asp-route-id="@Model.Id" class="btn btn-default">View assignments</a>
+    }
+</div>
