--- a/src/KaCake/wwwroot/css/site.css
+++ b/src/KaCake/wwwroot/css/site.css
@@ -61,3 +61,17 @@ textarea {
 .nav-tabs > li:hover > span {
     display: inline-block;
 }
+
+.results tr[visible='false'],
+.no-result {
+    display: none;
+}
+
+.results tr[visible='true'] {
+    display: table-row;
+}
+
+.counter {
+    padding: 8px;
+    color: #ccc;
+}
