--- a/src/KaCake/Views/Assignment/Index.cshtml
+++ b/src/KaCake/Views/Assignment/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model KaCake.ViewModels.Assignment.IndexViewModel
+﻿@using System.Globalization
+@model KaCake.ViewModels.Assignment.IndexViewModel
 
 @{
     ViewBag.Title = "View assignments";
@@ -8,35 +9,105 @@
 
 <h4>Assignments (@Model.Assignments.Count):</h4>
 
-<form role="form">
-    <div class="form-group">
-        <input id="searchinput" class="form-control" type="search" placeholder="Search..." />
-    </div>
+<div class="form-group pull-right">
+    <input type="text" class="search form-control" placeholder="What you looking for?">
+</div>
+<span class="counter pull-right"></span>
 
-    <div id="searchlist" class="list-group">
+<table class="table table-hover table-bordered results">
+    <thead>
+        <tr>
+            <th class="col-md-5 col-xs-5">Name</th>
+            <th class="col-md-4 col-xs-4">Submission status</th>
+            <th class="col-md-3 col-xs-3">Grade</th>
+        </tr>
+        <tr class="warning no-result">
+            <td colspan="4"><i class="fa fa-warning"></i> No result</td>
+        </tr>
+    </thead>
+    <tbody>
         @foreach (var assignment in @Model.Assignments)
         {
-            <a asp-controller="Assignment" asp-action="Review" asp-route-variantId="@assignment.TaskVariantId" asp-route-userId="@assignment.UserId" class="list-group-item">
-                <span>
-                    @assignment.UserName
-                    @if (assignment.Status == ReviewStatus.Graded)
-                    {
-                        <text> (@assignment.Score)</text>
-                    }
-                    else
-                    {
-                        <text> (@assignment.Status)</text>
-                    }
-                </span>
-            </a>
+            <tr data-href="@Url.Action("Review", "Assignment", new {variantId = assignment.TaskVariantId, userId = assignment.UserId})">
+                <td>@assignment.UserName</td>
+                <td>@assignment.Status</td>
+                <td>@(assignment.Status == ReviewStatus.Graded ? assignment.Score.ToString(CultureInfo.InvariantCulture) : "-")</td>
+            </tr>
         }
-    </div>
-</form>
+    </tbody>
+</table>
+
+@*<form role="form">
+        <div class="form-group">
+            <input id="searchinput" class="form-control" type="search" placeholder="Search..." />
+        </div>
+
+        <div id="searchlist" class="list-group">
+            @foreach (var assignment in @Model.Assignments)
+            {
+                <a asp-controller="Assignment" asp-action="Review" asp-route-variantId="@assignment.TaskVariantId" asp-route-userId="@assignment.UserId" class="list-group-item">
+                    <span>
+                        @assignment.UserName
+                        @if (assignment.Status == ReviewStatus.Graded)
+                        {
+                            <text> (@assignment.Score)</text>
+                        }
+                        else
+                        {
+                            <text> (@assignment.Status)</text>
+                        }
+                    </span>
+                </a>
+            }
+        </div>
+    </form>*@
 
 @section scripts
 {
     <script src="~/lib/bootstrap-list-filter/bootstrap-list-filter.min.js"></script>
     <script type="text/javascript">
-        $('#searchlist').btsListFilter('#searchinput');
+        $(document).ready(function() {
+            $(".search").keyup(function() {
+                var searchTerm = $(".search").val();
+                var listItem = $('.results tbody').children('tr');
+                var searchSplit = searchTerm.replace(/ /g, "'):containsi('");
+
+                $.extend($.expr[':'],
+                {
+                    'containsi': function(elem, i, match, array) {
+                        return (elem.textContent || elem.innerText || '').toLowerCase()
+                            .indexOf((match[3] || "").toLowerCase()) >=
+                            0;
+                    }
+                });
+
+                $(".results tbody tr").not(":containsi('" + searchSplit + "')").each(function(e) {
+                    $(this).attr('visible', 'false');
+                });
+
+                $(".results tbody tr:containsi('" + searchSplit + "')").each(function(e) {
+                    $(this).attr('visible', 'true');
+                });
+
+                var jobCount = $('.results tbody tr[visible="true"]').length;
+                $('.counter').text(jobCount + ' item');
+
+                if (jobCount == '0') {
+                    $('.no-result').show();
+                } else {
+                    $('.no-result').hide();
+                }
+            });
+
+            @if (User.IsInRole(RoleNames.Admin))
+            {
+                <text>
+                    $('.table > tbody > tr').css('cursor', 'pointer');
+                    $('.table > tbody > tr').click(function() {
+                        window.location.href = $(this).attr("data-href");
+                    });
+                </text>
+            }
+        });
     </script>
 }
