Lesha17. Changed comment highlight color

--- a/src/KaCake/wwwroot/lib/ace/lib/ace/css/editor.css
+++ b/src/KaCake/wwwroot/lib/ace/lib/ace/css/editor.css
@@ -429,7 +429,7 @@
 }
 
 .kacake_comment {
-    background-color: red;
+    background-color: #e8bbdb;
     border-bottom: 1px solid red;
     cursor: pointer !important;
     pointer-events: auto;
