--- a/src/KaCake/Views/Course/View.cshtml
+++ b/src/KaCake/Views/Course/View.cshtml
@@ -5,7 +5,7 @@
     bool isAdmin = User.IsInRole(RoleNames.Admin);
 }
 
-<h2>Course: @Model.Name</h2>
+<h2>@Model.Name</h2>
 
 <div class="well">@Html.Raw(Model.Description)</div>
 
@@ -13,6 +13,7 @@
 <div class="list-group">
     @if (isAdmin)
     {
+        <a asp-controller="Course" asp-action="Create" asp-route-id="@Model.Id" class="list-group-item list-group-item-warning"><span class="glyphicon glyphicon-pencil"></span> Edit course</a>
         <a asp-controller="TaskGroup" asp-action="Create" asp-route-id="@Model.Id" class="list-group-item active"><span class="glyphicon glyphicon-plus"></span> Add task group</a>
     }
     @foreach (var taskGroup in Model.TaskGroups)
