--- a/src/KaCake/Views/TaskGroup/View.cshtml
+++ b/src/KaCake/Views/TaskGroup/View.cshtml
@@ -7,7 +7,7 @@
     var isAdmin = User.IsInRole(RoleNames.Admin);
 }
 
-<h2>@Model.Name</h2>
+<h2><a asp-controller="Course" asp-action="View" asp-route-id="@Model.CourseId">@Model.CourseName</a> / @Model.Name</h2>
 
 <div class="well">@Html.Raw(Model.Description)</div>
 
@@ -15,6 +15,7 @@
 <div class="list-group">
     @if (isAdmin)
     {
+        <a asp-controller="TaskGroup" asp-action="Create" asp-route-id="@Model.CourseId" asp-route-taskGroupId="@Model.Id" class="list-group-item list-group-item-warning"><span class="glyphicon glyphicon-pencil"></span> Edit TaskGroup</a>
         <a asp-controller="TaskVariant" asp-action="Create" asp-route-id="@Model.Id" class="list-group-item active"><span class="glyphicon glyphicon-plus"></span> Create new variant</a>
     }
     @foreach (TaskVariantViewModel variant in Model.Variants)
