--- a/src/KaCake/Views/TaskVariant/Create.cshtml
+++ b/src/KaCake/Views/TaskVariant/Create.cshtml
@@ -11,6 +11,7 @@
     <div asp-validation-summary="All" class="text-danger"></div>
         
     <input asp-for="TaskGroupId"/>
+    <input name="Id" type="hidden" value="@Model.Id"/>
 
     <div class="form-group">
         <label asp-for="Name" class="col-md-2 control-label"></label>
