lesha-pamic. Хочу чтоб работало

--- a/src/KaCake/Views/Assignment/Index.cshtml
+++ b/src/KaCake/Views/Assignment/Index.cshtml
@@ -79,7 +79,7 @@
                 }
             });
 
-            @if (User.IsInRole(RoleNames.Admin))
+            @if ( Model.UserIsTeacher)
             {
                 <text>
                     $('.table > tbody > tr').css('cursor', 'pointer');
